--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-
     <uses-permission android:name="android.permission.BLUETOOTH" />
 
     <application
@@ -14,6 +13,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:theme="@style/AppTheme">
+
+        <meta-data android:name="com.bugsnag.android.API_KEY"
+             android:value="3950fbb2e58f6b77c75ac53b8559aad8"/>
+
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
