--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,6 +69,9 @@ jobs:
       - name: Setup env
         run: ./bin/set_ha_env_github.sh
 
+      - name: Run linter
+        run: ./android/gradlew -p android app:lintDebug app:ktlintCheck app:checkstyle
+
       - name: Build android Debug artifact
         uses: maierj/fastlane-action@v1.4.0
         with:
