--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext.kotlin_version = '1.3.72'
     ext {
         compileSdkVersion = 29
-        buildToolsVersion = "28.0.3"
+        buildToolsVersion = "29.0.2"
         targetSdkVersion = 29
         minSdkVersion = 23
 
@@ -14,6 +14,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath("com.android.tools.build:gradle:4.0.1")
@@ -24,6 +25,7 @@ buildscript {
         classpath "io.realm:realm-gradle-plugin:7.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
+        classpath("org.jlleitschuh.gradle:ktlint-gradle:9.3.0")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
