--- a/ios/Podfile
+++ b/ios/Podfile
@@ -61,6 +61,9 @@ def bt_pods
   pod 'Alamofire', '~> 4.9.1'
   pod 'KeychainAccess', '~> 4.2.0'
   pod 'ZIPFoundation', '~> 0.9.11'
+  pod 'PromisesSwift', :modular_headers => true
+  pod 'PromisesObjC', :modular_headers => true
+
 end
 
 target 'BT' do
