--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,7 +4,7 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 project 'COVIDSafePaths.xcodeproj',
 'Debug-BT' => :debug,
 'Release-BT' => :release,
-'Staging-BT' => :release,
+'Staging-BT' => :release
 
 def shared_pods
   # Pods for COVIDSafePaths
