--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,7 +37,7 @@ jobs:
       - uses: actions/checkout@master
 
       - name: Set XCode Version
-        run: sudo xcode-select -s /Applications/Xcode_12.0.app
+        run: sudo xcode-select -s /Applications/Xcode_12_beta.app
 
       - name: Cache node_modules/
         uses: actions/cache@v1
