--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "dayjs": "^1.8.24",
     "i18next": "^19.3.3",
     "lodash.isequal": "^4.5.0",
+    "node-fetch": "^2.6.1",
     "prop-types": "^15.7.2",
     "react": "16.11.0",
     "react-i18next": "^11.4.0",
