--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-community/netinfo": "^5.9.4",
     "@react-native-community/push-notification-ios": "^1.4.0",
+    "@react-native-community/segmented-control": "^2.1.2",
     "@react-navigation/bottom-tabs": "^5.5.2",
     "@react-navigation/native": "5.5.1",
     "@react-navigation/stack": "5.1.1",
