--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-i18next": "^11.4.0",
     "react-native": "0.63.2",
     "react-native-config": "^1.2.1",
+    "react-native-flash-message": "^0.1.16",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-local-resource": "^0.1.6",
